--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,7 @@ h3,
   margin-right: 25px;
 }
 
+
 /* contact page */
 
 #contact-form ul {
@@ -236,4 +237,71 @@ input[type=submit] {
   cursor: pointer;
   background: #4aaaa5;
   border: 0 none;
+}
+
+@media screen and (max-width: 980px) {
+
+  .auth-image {
+    float: none;
+    width: 100%;
+  }
+
+  .main-section {
+    max-width: 450px;
+  }
+
+  .sidebar{
+    float: left
+    margin-left: 40px;
+  }
+
+  #logo{
+    margin-left: 40px
+  }
+
+  nav{
+    margin-right: 40px
+  }
+
+
+}
+
+@media screen and (max-width: 768px) {
+
+  .auth-image {
+    float: none;
+  }
+
+  .main-section {
+    max-width: 850px;
+  }
+
+  .sidebar{
+    float: none;
+    max-width: 100%;
+  }
+
+}
+
+@media screen and (max-width: 640px) {
+
+  #logo{
+
+  }
+
+  .sidebar{
+    float: right;
+    max-width: 100%
+  }
+
+
+  .auth-image {
+  
+  }
+
+  .main-section {
+    max-width: 100%;
+  }
+
+
 }
